2015-12-21 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 8c86e7c28738c66c0e04ae7886b44dbcdfc6369e

	* combox/events.py (ComboxDirMonitor.on_modified)
	(NodeDirMonitor.on_modified): 'file modified' event that is
	triggered by watchdog after file creation only happens in
	GNU/Linux; modified the functions so that they handle it only on
	GNU/Linux.

2015-12-13 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/cbox.py (main): When it has to configure combox, it uses
	the graphical interface by default, if the '-nw' or '--cli' is
	provided, it uses the text/commandline interface.

2015-12-13 Siddharth Ravikumar <sravik@bgsu.edu>
	* combox/gui.py (ComboxConfigDialog.__init__): accepts a new
	argument called `condig_dir` that allows one to specify the combox
	configuration directory
	(ComboxConfigDialog.apply): passes the configuration directory
	that it accepts in the `__init__` to the `config_cb` function.

2015-12-10 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/gui.py (ComboxConfigDialog.apply): now writes the
	configuration to disk in the default combox configuration
	directory.

2015-12-03 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/gui.py: input validation kinda done + added status bar.

2015-12-03 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 952906378f80

	* combox/gui.py: added "re-enter passphrase" field + validation for it.


2015-11-30 Siddharth Ravikumar <sravik@bgsu.edu>

	* added combox/gui.py: contains ComboxConfigDialog, a graphical
	interface for configuring combox; it rough as zark.

2015-11-19 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py: ComboxDirMonitor now uses Lock; now this Lock
	is shared by both the ComboxDirMonitor and the NodeDirMonitors.

	Files changed because of the change to ComboxDirMonitor: combox/cbox.py

	This changed addresses bug#11 (See TODO.org).

2015-11-13 Siddharth Ravikumar <sravik@bgsu.edu>

	bumping to v0.1.3

2015-11-08 Siddharth Ravikumar <sravik@bgsu.edu>
